minigu/parser/tests/snapshots/snb/is4.snap
---
source: minigu/parser/tests/parser_test.rs
---
Err:
  Unexpected:
    input: "-- short reads 4\nMATCH (message WHERE message.id = 274877907096)\nWHERE label(message) = 'Post' OR label(message) = 'Comment'\nRETURN\n    message.creationDate as messageCreationDate,\n    coalesce(message.content, message.imageFile) as messageContent\n\nMATCH (message WHERE message.id = 3)\nWHERE label(message) = 'Post' OR label(message) = 'Comment'\nRETURN\n    message.creationDate as messageCreationDate,\n    coalesce(message.content, message.imageFile) as messageContent"
    span:
      start: 17
      end: 22
    position:
      - 2
      - 1
